# mail-app-flutter

./: README.md  pubspec.yaml
assets/cfg/: config.toml
backend/: .gitignore  Cargo.toml  api-spec.md  database_design.md  http_test.py  websocket_test.py
backend/src/: database.rs  inbox_client.rs  main.rs  my_error.rs
backend/src/database/: conn.rs  connections.rs  db_connection.rs  mailbox.rs  message.rs  messages.rs
backend/src/http_server/: handle_conn.rs  http_server.rs  params.rs  to_display.rs
backend/src/inbox_client/: connect.rs  get_mailboxes.rs  get_message.rs  get_messages.rs  get_messages_sorted.rs  get_messages_with_uids.rs  inbox_client.rs  logout.rs  mailboxes.rs  message.rs  message_flags.rs  messages.rs  modify_flags.rs  move_message.rs  my_error.rs  parse_message.rs  update_mailbox.rs
backend/src/inbox_client/handle_req/: get_mailboxes.rs  get_message.rs  get_messages.rs  get_messages_sorted.rs  get_messages_with_uids.rs  modify_flags.rs  move_message.rs  update_mailbox.rs
backend/src/mime_parser/: decode.rs  parse_address.rs  parse_time.rs  parser.rs
backend/src/types/: client.rs  database_request.rs  fetch_mode.rs  mailbox_changes.rs  message.rs  sequence_set.rs  session.rs  tcp_session.rs
backend/src/websocket/: handle_conn.rs  params.rs  websocket.rs
lib/: main.dart
lib/screens/: home.dart  settings.dart  splash.dart
lib/services/: global_configuration.dart  http_service.dart  inbox-service.dart  inbox_service.dart  local_settings.dart  mail-client.dart  mail-service.dart  mail_service.dart  overlay_builder.dart  (+2 more)
(+61 files in other folders)
