[package]
name = "mail_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
async-imap = "0.9.7"
regex = "1.10.5"
rusqlite = { version = "0.32.0", features = ["bundled", "array", "backup"] }
async-std = { version = "1.10.0", features = ["attributes"] }
async-native-tls = "0.5.0"
futures = "0.3.17"
url-escape = "0.1.0"
